# s3syncy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: publish.yml  security.yml  sonar.yml  tests.yml
docs/: ADVANCED.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  GETTING_STARTED.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md
s3sync/: __init__.py  conflict.py  daemon.py  index.py  patterns.py  throttle.py  watcher.py
s3syncy/: cli.py  config.py  daemon.py  engine.py  index.py  integrity.py
